# bazel-platform-mappings

./: .bazelrc  .bazelversion  .gitignore  WORKSPACE.bazel
stages/swift/: BUILD.bazel
tools/: BUILD.bazel  platform_mappings
